--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
       }
       
       body {
-          background-color:#051c1c;
+          background-color:#000000;
           background-image:url ("/Movie poster/ok.jpg");
           background-repeat: no-repeat;
-          background-size: 100% 100%;
+          background-size: 90% 90%;
           background-attachment:fixed;
           background-position: top center;
           color:white;
