--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       .tooltip:hover .tooltiptext {
         visibility: visible;
       }
-      ul.actors .tooltiptext:hover {
+      ul .tooltiptext:hover {
         visibility: visible;
       }
       body {
