--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
     <section>
 	<!---actors--->
     <ul class="actors">
-	    <li><div class="tooltip">Actors
+	    <li> class="tooltip">Actors
         <span class="tooltiptext">The main actors in th hunger Games</span>
-      </div></li>
-        <li><div class="tooltip">Jennifer Lawrence
+      </li>
+        <li> class="tooltip">Jennifer Lawrence
           <span class="tooltiptext">Katnis Everdeen</span>
-        </div></li>
-        <li><div class="tooltip">Josh Hutcherson
+        </li>
+        <li> class="tooltip">Josh Hutcherson
           <span class="tooltiptext">Peeta Mellark</span>
-        </div></li>
-        <li><div class="tooltip">Liam Hemsworth
+        </li>
+        <li> class="tooltip">Liam Hemsworth
           <span class="tooltiptext">Gale Hawthorne</span>
-        </div></li>
-        <li><div class="tooltip">Elizabeth Banks
+        </li>
+        <li> class="tooltip">Elizabeth Banks
           <span class="tooltiptext">Effie Trinket</span>
-        </div></li>
-        <li><div class="tooltip">Donald Sutherland
+        </li>
+        <li> class="tooltip">Donald Sutherland
           <span class="tooltiptext">President Snow</span>
-        </div></li>
-        <li><div class="tooltip">Stanley Tucci
+        </li>
+        <li> class="tooltip">Stanley Tucci
           <span class="tooltiptext">Caesar Flickerman</span>
-        </div></li>
-		<li><div class="tooltip">Willow Shields
+        </li>
+		<li> class="tooltip">Willow Shields
       <span class="tooltiptext">Primrose Everdeen</span>
-    </div></li>
+    </li>
     </ul>
       
 
