--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section>
 	<!---actors--->
     <ul class="actors">
-	    <li> class="tooltip">Actors
+	    <li class="tooltip">Actors
         <span class="tooltiptext">The main actors in th hunger Games</span>
       </li>
         <li> class="tooltip">Jennifer Lawrence
