--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 	    <li class="tooltip">Actors
         <span class="tooltiptext">The main actors in th hunger Games</span>
       </li>
-        <li> class="tooltip">Jennifer Lawrence
+        <li class="tooltip">Jennifer Lawrence
           <span class="tooltiptext">Katnis Everdeen</span>
         </li>
-        <li> class="tooltip">Josh Hutcherson
+        <li class="tooltip">Josh Hutcherson
           <span class="tooltiptext">Peeta Mellark</span>
         </li>
-        <li> class="tooltip">Liam Hemsworth
+        <li class="tooltip">Liam Hemsworth
           <span class="tooltiptext">Gale Hawthorne</span>
         </li>
-        <li> class="tooltip">Elizabeth Banks
+        <li class="tooltip">Elizabeth Banks
           <span class="tooltiptext">Effie Trinket</span>
         </li>
-        <li> class="tooltip">Donald Sutherland
+        <li class="tooltip">Donald Sutherland
           <span class="tooltiptext">President Snow</span>
         </li>
-        <li> class="tooltip">Stanley Tucci
+        <li class="tooltip">Stanley Tucci
           <span class="tooltiptext">Caesar Flickerman</span>
         </li>
-		<li> class="tooltip">Willow Shields
+		<li class="tooltip">Willow Shields
       <span class="tooltiptext">Primrose Everdeen</span>
     </li>
     </ul>
