--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section>
 	<!---actors--->
     <ul class="actors">
-	    <li> Actors
+		      <li> <strong>Actors</strong>
       </li>
         <li class="tooltip">Jennifer Lawrence
           <span class="tooltiptext">Katnis Everdeen</span>
