--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
         padding: 14px 16px;
         text-decoration: none;
       }
-				      			      
+	li:first-child {
+	background-color:#000000;
+	}			      
       
       /* Change the link color to #111 (black) on hover */
       li:hover {
