--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         padding: 14px 16px;
         text-decoration: none;
       }
-	li:hover; first-child {
+	li:hover first-child {
 	background-color:#000000;
 	}			      
       
