--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       }
       
       li:last-child {
-        border-right: none;
+        border-right: 0px none;
       }
       .active {
         background-color: #4CAF50;
@@ -205,7 +205,7 @@
         text-decoration: none;
       }
 	li:first-child:hover {
-	background-color:#111;
+	background-color:#000000;
 	}			      
       
       /* Change the link color to #111 (black) on hover */
