--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
       .active {
         background-color: #4CAF50;
       }
+
+    ul {position: sticky;
+  top: 0;
+}
       
       ul {
         list-style-type: none;
