--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
         background-color: #4CAF50;
       }
 
-    ul {position: sticky;
-  top: 0;
+    ul { position: sticky;
+  top: 0%;
 }
       
       ul {
