--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         background-size: 90% 90%;
         background-attachment: fixed;
         background-position: top center;
-        color: white;
+        color: rgb(255, 255, 255);
         font-family: 'SF Pro display', sans-serif;
         text-align: center;
         padding: 10;
@@ -210,11 +210,14 @@
 
       ul {
         list-style-type: none;
-        padding: 60px;
+        padding: 40px;
         overflow: hidden;
         position: sticky;
         top: -10%;
+        background-color: #000000;
       }
+
+
 
       li {
         float: left;
@@ -222,9 +225,9 @@
 
       li {
         display: block;
-        color: white;
+        color: rgb(255, 255, 255);
         text-align: center;
-        padding: 16px 14px;
+        padding: 6px 14px;
         text-decoration: none;
       }
 
