--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
       <h1>The Hunger Games</h1>
       <h2>May the odds be ever in your favour...</h2>
+      <h6>Release date 22nd March 2012</h6>
 
       <footer class="credits">
 
@@ -238,6 +239,9 @@
       /* Change the link color to #111 (black) on hover */
       li:hover {
         background-color: #8a8579;
+      }
+      h6 {
+        font-family: dimbo, serif;
       }
     </style>
 
