--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
       h1,
       h2 {
-        font-family: georgia, serif;
+        font-family: georgia, sans-serif;
         font-style: italic;
         font-weight: normal;
       }
@@ -241,7 +241,7 @@
         background-color: #8a8579;
       }
       h4 {
-        font-family: dimbo, serif;
+        font-family: dimbo, sans-serif;
       }
     </style>
 
